feat: fix canvas sizes

--- a/texture-editor.html
+++ b/texture-editor.html
@@ -30,10 +30,12 @@
                 <button id="download-button">Download Texture</button>
             </div>
         </div>
-        <canvas id="editor-canvas" width="256" height="256"></canvas>
+        <div>
+            <canvas id="editor-canvas" width="256" height="256"></canvas>
+        </div>
         <div id="preview-container">
             <h3>Tessellation Preview</h3>
-            <canvas id="preview-canvas" width="256" height="256"></canvas>
+            <canvas id="preview-canvas" width="512" height="512"></canvas>
         </div>
     </div>
     <script src="js/texture-editor.js"></script>
